--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -11,7 +11,7 @@
                             <div class="mb-3">
                                 <span class="fs-3" style="font-weight: 500;">Регистрация</span>
                             </div>
-                            <form class="row g-3" method="POST">
+                            <form class="row g-4" method="POST">
                                 {% csrf_token %}
                                 <input type="hidden" name="next" value="{{ next }}">
                                 <div class="col-lg-6">
@@ -27,9 +27,31 @@
                                     {{ form.email.label_tag }}
                                     {{ form.email }}
                                 </div>
+                                <div class="nickname-class col-lg-6">
+                                    {{ form.username.label_tag }}
+                                    {{ form.username }}
+                                </div>
+                        
                                 <div class="col-lg-6">
-                                    <span>{{ form.sex.label }}</span>
-                                    <div class="d-flex align-items-center gap-3 mt-3">
+                                    {{ form.password1.label_tag }}
+                                    {{ form.password1 }}
+                                </div>
+                                <div class="password-confirmation col-lg-6">
+                                    {{ form.password2.label_tag }}
+                                    {{ form.password2 }}
+                                </div>
+                                <div class="help-class col-lg-12 mt-1 text-center">
+                                    <span id="passwordHelpInline" class="form-text fs-6">Должно быть 8-20 символов</span>
+                                </div>
+
+                                <div class="date-birth-class col-lg-6">
+                                    {{ form.birthdate.label_tag }}
+                                    {{ form.birthdate }}
+                                </div>
+
+                                <div class="col-lg-6">
+                                    <span>{{ form.sex.label_tag }}</span>
+                                    <div class="d-flex align-items-center gap-3 mt-2">
                                         {% for radio in form.sex %}
                                         <div class="form-check">
                                             {{ radio.tag }}
@@ -38,29 +60,13 @@
                                         {% endfor %}
                                     </div>
                                 </div>
-                        
-                                <div class="col-lg-6">
-                                    {{ form.password1.label_tag }}
-                                    {{ form.password1 }}
+                                
+                                <!-- Web -->
+                                <div class="mt-4 d-none d-lg-block">
+                                    <button type="submit" class="btn btn-dark mb-2">Зарегистрироваться</button>
                                 </div>
-                                <div class="help-class col-lg-6 mt-5">
-                                    <span id="passwordHelpInline" class="form-text fs-6">Должно быть 8-20 символов</span>
-                                </div>
-                                <div class="password-confirmation col-lg-6">
-                                    {{ form.password2.label_tag }}
-                                    {{ form.password2 }}
-                                </div>
-                                <div class="date-birth-class col-lg-6">
-                                    {{ form.birthdate.label_tag }}
-                                    {{ form.birthdate }}
-                                </div>
-                                <div class="nickname-class col-lg-12">
-                                    {{ form.username.label_tag }}
-                                    {{ form.username }}
-                                </div>
-                                <div class="mt-3 d-none d-lg-block">
-                                    <button type="submit" class="btn btn-dark mb-3">Зарегистрироваться</button>
-                                </div>
+
+                                <!-- Mobile -->
                                 <div class="mt-3 d-block d-lg-none text-center">
                                     <button type="submit" class="btn btn-dark mb-3">Зарегистрироваться</button>
                                 </div>
