--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -22,10 +22,7 @@
             </div>
             <div class="col-12 mb-3 d-flex justify-content-between">
                 <div class="feedback d-flex gap-3 mt-3">
-                    <div class="likes">
-                        <i class="fa-solid fa-heart"></i>
-                        2
-                    </div>
+                    {% include 'main/snippets/likes.html' %}
                     <div class="favorites">
                         <i class="fa-solid fa-bookmark"></i>
                         1
